<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="helpdesk">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="agreement_short">Соглашение</string>
    <string name="public_offer_title">Оферта на оказание образовательных услуг дополнительного образования Яндекс.Практикум для физических лиц</string>
    <string name="agreement_note_1">Данный документ является действующим, если расположен по адресу: https://yandex.ru/legal/practicum_offer</string>
    <string name="agreement_note_2">Российская Федерация, город Москва</string>
    <string name="terms">1. ТЕРМИНЫ</string>
    <string name="terms_part">Понятия, используемые в Оферте, означают следующее: Авторизованные адреса — адреса электронной почты каждой Стороны. Авторизованным адресом Исполнителя является адрес электронной почты, указанный в разделе 11 Оферты. Авторизованным адресом Студента является адрес электронной почты, указанный Студентом в Личном кабинете. Вводный курс — начальный Курс обучения по представленным на Сервисе Программам обучения в рамках выбранной Студентом Профессии или Курсу, рассчитанный на определенное количество часов самостоятельного обучения, который предоставляется Студенту единожды при регистрации на Сервисе на безвозмездной основе. В процессе обучения в рамках Вводного курса Студенту предоставляется возможность ознакомления с работой Сервиса и определения возможности Студента продолжить обучение в рамках Полного курса по выбранной Студентом Программе обучения. Точное количество часов обучения в рамках Вводного курса зависит от выбранной Студентом Профессии или Курса и определяется в Программе обучения, размещенной на Сервисе. Максимальный срок освоения Вводного курса составляет 1 (один) год с даты начала обучения.</string>
    <string name="practicum_license">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_intent_handle">Нет приложения способного обработать запрос</string>
    <string name="email">ra@gmail.com</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="https_practicum_yandex_ru_android_developer">Посмотрите этот курс по Андроид-разработке в Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="todo">TODO</string>
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="track_time">3:55</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="your_search">Вы искали</string>
    <string name="play_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="aud_year">Год</string>
    <string name="aud_genre">Жанр</string>
    <string name="aud_country">Страна</string>
    <string name="no_preview_url">-----</string>
    <string name="mp_not_ready">MediaPlayer не готов</string>
    <string name="no_url_to_play">Нет ссылки для воспроизведения произведения</string>
    <string name="mp_not_ready_to_play">MediaPlayer готов к воспроизведению</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="audio_playback_attribution">This app plays audio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="pl_title">Название*</string>
    <string name="pl_description">Описание</string>
    <string name="create_new_playlist_btn">Создать</string>
    <string name="add_into_playlist">Добавить в плейлист</string>
    <string name="abort_create_playlist">Завершить создание плейлиста?</string>
    <string name="all_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel_btn">Отмена</string>
    <string name="finish_btn">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="Error">Ошибка</string>
    <string name="okay">ОК</string>
    <string name="no_photo_access">Нет разрешения на доступ к фото</string>
    <string name="error_playlist_title_empty">Название плейлиста не может быть пустым</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="error">Ошибка: %1$s</string>
    <string name="allready_exists_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трэк</item>
        <item quantity="few">%d трэка</item>
        <item quantity="many">%d трэков</item>
        <item quantity="other">%d трэков</item>
    </plurals>
    <string name="zero_minutes">0 минут</string>
    <plurals name="tracks_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="delete_track_title">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_title">Хотите удалить плейлист «%1$s»? </string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="playlist_deleted_success">Плейлист успешно удален</string>
    <string name="no_intent_handle_">Не удалось выполнить действие</string>
    <string name="no_shareable_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="unknown_artist">Неизвестный исполнитель</string>
    <string name="unknown_track_name">Без названия</string>
    <string name="unknown_track_time">--:--</string>
    <string name="unknown_playlist">Неизвестный плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_updated">Плейлист \"%1$s\" обновлен</string>
    <string name="playlist_updated_success">Плейлист обновлен успешно</string>
    <string name="empty_playlist_message">В этом плейлисте нет треков</string>
    <string name="discard_changes_title">Отменить изменения?</string>
    <string name="discard_changes_message">Все внесённые изменения будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="discard">Завершить</string>
    <string name="error_download_playlist">Ошибка загрузки плейлиста: %1$s</string>
    <string name="no_empty_playlist_title">Название плейлиста не может быть пустым</string>
    <string name="playlist_not_found">Плейлист не найден</string>
    <string name="save_error">Ошибка сохранения: %1$s</string>
    <string name="error_deleting_track">Ошибка удаления трека: %1$s</string>
    <string name="unknown_error_over_deleting_playlist">Неизвестная ошибка при удалении плейлиста</string>
    <string name="unknown">Неизвестно</string>
    <string name="error_deleteing">Ошибка удаления: %1$s</string>
    <string name="saving">Сохранение</string>
    <string name="playing_track">Воспроизведение музыки</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update_btn">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="back">Назад</string>
    <string name="add_cover">Добавить обложку</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="play">Воспроизвести</string>
    <string name="pause">Пауза</string>
    <string name="aud_album">Альбом</string>
</resources>