<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_view"
    style="@style/SecondaryViews">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitcher"
        style="@style/SwitchButtons"
        android:text="@string/dark_theme" />

    <TextView
        android:id="@+id/shareApp"
        style="@style/SettingsButtons"
        android:text="@string/app_share"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/sendToHelpdesk"
        style="@style/SettingsButtons"
        android:text="@string/helpdesk"
        app:drawableEndCompat="@drawable/helpdesk" />

    <TextView
        android:id="@+id/practicumOffer"
        style="@style/SettingsButtons"
        android:text="@string/agreement"
        app:drawableEndCompat="@drawable/agreement" />
</LinearLayout>