<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/agreementCaptionTitle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/agreement_short"
        android:fontFamily="@font/ys_display"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:gravity="center_vertical"
        android:paddingStart="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/agreementTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/public_offer_title"
        android:fontFamily="@font/ys_display"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/agreementCaptionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/agreementNote1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agreement_note_1"
        android:fontFamily="@font/ys_display"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/agreementTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/agreementNote2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agreement_note_2"
        android:fontFamily="@font/ys_display"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/agreementNote1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:fontFamily="@font/ys_display"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/agreementNote2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/terms_part"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_part"
        android:fontFamily="@font/ys_display"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>