<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/newPlayList"
        style="@style/ActivityTitlesSecondary"
        android:text="@string/new_play_list"
        app:drawableStartCompat="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/new_playlist_image"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="18dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlayList">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/rectangle_playlist_image" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/add_play_list_img" />
    </FrameLayout>

    <TextView
        android:id="@+id/new_playlist_title"
        style="@style/NewPlaylistInputs"
        android:layout_marginTop="32dp"
        android:hint="@string/pl_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_image" />

    <TextView
        android:id="@+id/new_playlist_description"
        style="@style/NewPlaylistInputs"
        android:layout_marginTop="8dp"
        android:hint="@string/pl_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_title" />

    <Button
        android:id="@+id/button"
        style="@style/NewPlaylistButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


