<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/artwork_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_no_artwork_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="14dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name"
            style="@style/RcTrackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/track_name"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artists_name"
                style="@style/RcArtistsNameTrackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/artist_name"
                android:textSize="11sp"
                tools:ignore="InefficientWeight" />

            <ImageView
                android:id="@+id/point_image"
                style="@style/RcDelimiterTimeButton"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_artists_time_delimiter"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/trackTime"
                style="@style/RcArtistsNameTrackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:text="@string/track_time"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        style="@style/RcDelimiterTimeButton"
        android:layout_width="8dp"
        android:layout_height="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/agreement"
        tools:ignore="ContentDescription" />
</LinearLayout>
